# talk-serde-dyn-schema

./: Cargo.toml
benches/: serde.rs
src/: lib.rs
src/binc/: de.rs  mod.rs  ser.rs
