cargo-features = ["profile-rustflags"]

[package]
name = "talk-serde-dyn-schema"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[dependencies]
arrayvec = "0.7.4"
serde = "1.0.197"
serde_json = "1.0.115"
thiserror = "1.0.58"
bincode = "1.3.3"

[[bench]]
name = "serde"
harness = false

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
panic = "abort"
incremental = false
rustflags = ["-C", "target-cpu=native", "-Z", "tune-cpu=native"]